collect to list build issue fixed